Changelog
=========

2.1.8 (unreleased)
------------------

- Fix exception with workflow vocabulary when workflow titles contained UTF-8 encoded
  characters [miohtama]

2.1.7 (2012-07-02)
------------------

- Depend on zope.formlib instead of zope.app.form.
  [davisagli]

- Remove hard dependency on Archetypes.
  [davisagli]

2.1.6 (2012-04-09)
------------------

- Made our mock queryUtility in the tests more life like.  This avoids
  test failures in combination with zope.pagetemplate 3.6.0 or higher.
  [maurits]


2.1.5 - 2011-12-22
------------------

- Ensure that the keywords vocabulary term titles are unicode values,
  as per zope.schema.interfaces.ITitledTokenizedTerm.
  [mj]


2.1.4 - 2011-12-22
------------------

- Ensure that the keywords vocabulary term tokens are 7-bit values,
  as per zope.schema.interfaces.ITokenizedTerm.
  [mj]


2.1.3 - 2011-07-04
------------------

- Roles vocabulary is translated and sorted by translated role id.
  Fixes http://dev.plone.org/plone/ticket/11958.
  [WouterVH]


2.1.2 - 2011-04-21
------------------

- Types vocabularies are sorted by translated titles.
  [thomasdesvenain]

- Add MANIFEST.in.
  [WouterVH]

- Transitions vocabulary is translated and sorted by transition id.
  [thomasdesvenain]


2.1.1 - 2011-03-02
------------------

- Exclude 'text/x-plone-outputfilters-html' from the allowable content types
  vocabulary.
  [davisagli]


2.1 - 2011-02-10
----------------

- Remove "Discussion Item" from BAD_TYPES vocabulary.
  [timo]


2.0.2 - 2010-10-27
------------------

- Translation of workflow states vocabularies didn't work in some contexts.
  [thomasdesvenain]


2.0.1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]


2.0 - 2010-07-01
----------------

- Internationalized editor label (especially for 'None' value).
  [thomasdesvenain]


2.0b4 - 2010-06-13
------------------

- Use the standard libraries doctest module.
  [hannosch]


2.0b3 - 2010-04-07